-Changed form heading style -Added more line height to ingredients -Fixed page bleeding error by trimming length of ingredients

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,7 @@ html {
   justify-content: space-evenly;
   align-items: center;
   &__heading {
+    font-weight: 500;
     font-style: italic;
   }
   &__wrapper {
