--- a/src/components/Recipe.scss
+++ b/src/components/Recipe.scss
@@ -20,7 +20,7 @@
     font-size: 18px;
     list-style-type: none;
     text-align: start;
-    line-height: 24px;
+    line-height: 32px;
   }
   &__calories {
     font-weight: 500;
